tests/snapshots/examples_fixtures/type_system__failing__64_hm_inferred_call_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/64_hm_inferred_call_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/type_system/failing/64_hm_inferred_call_mismatch.flx:8:18
  |
8 |     let b: Int = f("x")
  |                  ^^^^^^
  |                  ------ expected Int, found String
== stdout ==
<not executed>
